# summon

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  commitlint.config.js  justfile
.github/workflows/: ci.yml  release.yml
branding/: README.md
crates/summon/: Cargo.toml
crates/summon/src/: app.rs  cli.rs  config.rs  controller.rs  diagnostics.rs  lib.rs  main.rs  runner.rs
crates/summon/src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
crates/summon/tests/: integration.rs
crates/summon/tests/fixtures/: zed-live-window-cycle.json
examples/: shell-aliases.sh  skhdrc  summon.toml
examples/raycast/: summon-browser.sh  summon-editor.sh  summon-finder.sh  summon-helium.sh  summon-notion.sh  summon-preview.sh  summon-terminal.sh  summon-wezterm.sh  summon-zed.sh
packaging/: summon-switcher.rb  summon.rb
spec/: performance-improvement.md  summon-implementation-progress.md  summon-software-specification.md
