[workspace]
resolver = "2"
members = ["crates/summon"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/liamwh/summon"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 1 } # KEEP THIS AT WARN, DO NOT CHANGE TO ALLOW

[workspace.lints.clippy]
unwrap_used = "deny" # Allow in tests with #![cfg_attr(test, allow(clippy::unwrap_used))]

wildcard_imports = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
significant-drop-tightening = { level = "allow", priority = 2 }
match_bool = { level = "allow", priority = 2 }
uninlined_format_args = { level = "warn", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }

# Lint groups
correctness = { level = "deny", priority = 1 }
perf = { level = "warn", priority = 1 }
style = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
suspicious = { level = "warn", priority = 1 }

# Allow nursery & pedantic lints
pedantic = { level = "allow", priority = 3 }
nursery = { level = "allow", priority = 3 }
