[package]
name = "summon"
description = "A tiny macOS command-line tool for opening, focusing, and cycling applications from declarative keybindings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["macos", "cli", "focus", "app-switcher", "accessibility"]
categories = ["command-line-utilities", "os::macos-apis"]

[dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
clap = { version = "4", features = ["derive"] }
core-foundation = "0.10"
libc = "0.2"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[lints]
workspace = true
